--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "chai": "^4.3.4",
     "dotenv": "^14.2.0",
     "ethereum-waffle": "^3.2.0",
-    "ethers": "^5.0.0",
-    "hardhat": "^2.8.3"
+    "ethers": "^5.7.2",
+    "hardhat": "^2.14.0",
+    "hardhat-console": "^1.0.0"
   }
 }
